OSSN - OPEN SOURCE SOCIAL NETWORK 3.9

Bugfixes:

* View all comments link missing on direct photo view #591
* Poster image display problem with profile pics < 32 x 32 #595
* Deleting the current profile pic/cover doesn't update cache #590 [In Progress]
* Show latest comments instead of oldest comments #603
* Post owner can not delete others comments #607
* Make 'notifications/all' page work again #610

General:

* Refactoring the ossn_view_widget function

OSSN - OPEN SOURCE SOCIAL NETWORK 3.8

Bugfixes:

* Don't load notification and chat boot api when user is not loggedin.
* Disallow version check request to non-loggedin users #565
* Wall, tag a friend , GUID issue #566
* Hardcoded paths in theme's css #563
* Problem with group comments showing up via notification link #559
* Change profile icon urls #537
* Fix typo in link href javascript #536
* Problem of characters lenght on the instant messenger #520
* Admin Dashboard users graphic appear in January #557
* OssnWall friends settings,  didn't shows pagination #555
* ossn_get_userdata($this->dir) results in wrong path #582
* OssnChat css fixes typo #583
* Tag post with a friend, doesn't show in friend's notification #589

General:
 * Move notification topbar to plugin views.
 * Remove direct call to external component class.
 * Remove invalid old files form ossnblack theme.
 * All the menus are now sorted to alphabetically.
 
Enhancements: 
 * Add a tagging friend option to users wall #567
 * Add topbar static menu to dynamic #541
 
OSSN - OPEN SOURCE SOCIAL NETWORK 3.7 Minor fix

Bugfixes:

* Unable to delete user.
* Update non-object iconURL() on OssnLikes/ossn_com.php 156

OSSN - OPEN SOURCE SOCIAL NETWORK 3.6

Bugfixes:

* Message Inbox section - layout error #542
* Poke translation issue #543
* Css(class): ossn-profile-wall shouldn't have fixed hight #545
* Profile edit form shows wrong default language #546
* Change uppercase admin tobbar right menu.
* There is issue in chat window layout firefox #548