@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <opensource_socialnework xmlns="http:/opensource-socialnetwork.org/v/1.0">
-    <version>3.9-dev</version>
-    <stable_version>3.8</stable_version>
-    <release>1446311454</release>
+    <version>3.9</version>
+    <stable_version>3.9</stable_version>
+    <release>1448807613</release>
     <licence>GNU General Public License, version 2</licence>
     <author_url>http://www.opensource-socialnetwork.org</author_url>
     <copyright>(C) 2014-2015 Informatikon Technologies. All rights reserved</copyright>
